fix text overlap issue in css

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -22,17 +22,17 @@
 
 #product-container {
     position: relative;
-    height:400px;
+    height:380px;
 }
 
 #product-img-container {
-    bottom: 58px;
-    position: absolute;
+    margin-top: 10px;
     width: 100%;
 }
 
 #product-img {
     max-width: 500px;
+    max-height: 350px;
 }
 
 #product-name-container {
